# extract_rois

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
extract_rois/: extract_rois.py  freesurfer_rois.csv
