[project]
name = "extract_rois"
version = "1.0.0"
description = "Extract ROI values from nifti images using masks or parcellation files"
authors = [{ name = "Daniel Schonhaut", email = "daniel.schonhaut@gmail.com" }]
dependencies = ["nibabel", "numpy", "pandas", "tabulate"]

[project.scripts]
extract_rois = "extract_rois.extract_rois:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["extract_rois"]